Bug 166724 - Checkbox anchor wrongly imported from xlsx
Summary: Checkbox anchor wrongly imported from xlsx
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.4.7.2 release
Hardware: All All
: medium normal
Assignee: Johann Lorber
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks: XLSX-Form-Controls
  Show dependency treegraph
 
Reported: 2025-05-25 18:13 UTC by Michael Zapf
Modified: 2025-12-15 14:24 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
Demo Excel file, to be opened in Calc (12.15 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2025-05-25 18:13 UTC, Michael Zapf
Details
Checkboxes Testfile - Excel 2013 - Move and Size with Cells enabled (12.74 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2025-09-15 10:29 UTC, Johann Lorber
Details
Checkboxes Testfile - Excel 2013 - Move and Size with Cells disabled (12.75 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2025-09-15 10:29 UTC, Johann Lorber
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Zapf 2025-05-25 18:13:26 UTC
Created attachment 200956 [details]
Demo Excel file, to be opened in Calc

After importing an Excel spreadsheet with a checkbox control that is anchored to a cell, the checkbox is then shown as anchored on the page instead. 

For some documents this leads to a wrong position of the checkbox on the sheet and thus makes it unusable.
Comment 1 BogdanB 2025-05-25 18:40:51 UTC
Open the file and insert a row above the checkboxes lines. 
Checkboxes are not in line with the options for them (checkboxes are wrong anchored to page).

Confirm with
Version: 25.2.3.1 (X86_64) / LibreOffice Community
Build ID: d8d1af5f77df955194e52baabe19324532ac8e8b
CPU threads: 16; OS: Linux 6.11; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 2 BogdanB 2025-05-27 05:41:11 UTC
The anchor is imported as on page, not as on cell.

If we changed anchor to cell, everything works fine.

It is the same in
Version: 25.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: a0dd1c4a363b9d4d2a16ff82acc3ada0c075cb65
CPU threads: 16; OS: Linux 6.11; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 3 Telesto 2025-06-09 12:08:34 UTC
Also in
Version: 7.6.3.0.0+ (X86_64) / LibreOffice Community
Build ID: 35f19e5cb93ce218787904e99c2bedfd40e725cc
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded

and in 
Version:  7.0.7

and in
Versie: 4.4.7.2 
Build ID: f3153a8b245191196a4b6b9abd1d0da16eead600
Locale: nl_NL
Comment 4 Johann Lorber 2025-08-02 09:00:09 UTC
(In reply to BogdanB from comment #2)
> The anchor is imported as on page, not as on cell.
> 
> If we changed anchor to cell, everything works fine.

I'd like to work on this issue. Would you have some code pointers?
I have achieved anchoring the form controls to the cell during the import, but it didn't really solve the issue so I'm thinking I didn't do it right.
Comment 5 Buovjaga 2025-08-03 06:36:12 UTC
(In reply to Johann Lorber from comment #4)
> (In reply to BogdanB from comment #2)
> > The anchor is imported as on page, not as on cell.
> > 
> > If we changed anchor to cell, everything works fine.
> 
> I'd like to work on this issue. Would you have some code pointers?
> I have achieved anchoring the form controls to the cell during the import,
> but it didn't really solve the issue so I'm thinking I didn't do it right.

Maybe submit your code as a WIP patch, so it's easier for others to comment.
Comment 6 Arnaud Versini 2025-08-16 15:32:54 UTC
Sorry to disturb you but the computer service company that employs you has been selected on the basis that they have skills on LibreOffice codebase.

As it's not the case your employer should pay for services to real free software companies with certified developers listed here: https://www.documentfoundation.org/certified-developers/
Comment 7 Johann Lorber 2025-08-16 17:29:54 UTC Comment hidden (off-topic)
Comment 8 Arnaud Versini 2025-08-16 18:03:17 UTC Comment hidden (off-topic)
Comment 9 Johann Lorber 2025-08-16 18:14:03 UTC Comment hidden (off-topic)
Comment 10 Arnaud Versini 2025-08-17 02:37:17 UTC Comment hidden (off-topic)
Comment 11 Johann Lorber 2025-08-17 08:46:13 UTC Comment hidden (obsolete)
Comment 12 Arnaud Versini 2025-08-17 10:46:08 UTC Comment hidden (off-topic)
Comment 13 Johann Lorber 2025-08-25 10:37:09 UTC
https://gerrit.libreoffice.org/c/core/+/190166

> And don't worry, you succeeded in turned my away from ever interacting
> on this forum again.
This was rash, so I'd like to retract it. For those of you who would like to keep this side-conversation going in an amicable way, I am open to discuss it through matrix, email, IRC or whichever way you prefer.

Now, here, I'd like to focus on the issue at hand. I will refrain from asking for any kind of help as much as possible, as I understand that it isn't very welcome coming from me because of my affiliation with my employer. So here are my notes and observations:

In my WIP patch I have included logic to anchor form control shapes to the cell. My understanding is that, in Excel 2010 (v.14.000, potentially since Excel v.5 but I haven't been able to check that yet), for these legacy shapes, the presence of the Anchor property (in the VML file) infers that the shape is anchored to the cell on the top left corner of the rectangle defined by this property (e.g.: if <x:Anchor>2, 20, 1, 2, 4, 20, 2, 10</x:Anchor> then the shape should be anchored to cell(2, 1), the rectangles top-left to bottom-right being (2,1) to (4,2)). From my research and observations, the Anchor property is not present when the VML shape has been anchored to the page through Excel 2010. Please correct me if you know of contrary examples, I very well could be wrong. I also haven't been able to test with other Excel versions yet besides Excel 365 (v.16.030), which uses MoveWithCells and SizeWithCells properties.
This is why I have tied my patch as closely as possible to the ClientData parsing process, which allows us to check on the Anchor property and have access to the worksheet helper.
As of now, my patch doesn't check which Excel version generated the xlsx file, neither is that kind of check done elsewhere as far as I am aware. Therefore the patch is very incomplete, but simply allowed me check how I could anchor the control forms to cell and if that could solve the other following issue:

> I have achieved anchoring the form controls to the cell during the import,
> but it didn't really solve the issue so I'm thinking I didn't do it right.
The reason I made this comment is because in my tests I have observed another issue regarding form controls during the import process, when the sheet's columns and rows' size are not default, then it looks like it messes up the positioning of those shapes in the import result. The origin of this misplacement is yet to be 100% confirmed, I am going to need to dig a bit more for that. Since the original poster mentions a problem with positioning of the shapes resulting from the anchoring issue, I assumed that we were talking about the same positioning problem. Now I understand that the original post meant that the position of the form control is not updated with the cell's position, if we fix the anchoring issue it does indeed solve that. The main complexity here is defining exactly how each version of Excel references cell anchoring in the VML file.
I will open another bug for the form control positioning issue as it seems to be a different a problem.
Comment 14 Johann Lorber 2025-09-15 10:27:43 UTC
After digging into it a little more :
- my original claim that the Anchor property defines cell anchoring is wrong
- Excel does in fact use MoveWithCells (and SizeWithCells) but not in the way described in its own documentation (https://learn.microsoft.com/en-us/dotnet/api/documentformat.openxml.vml.spreadsheet.movewithcells?view=openxml-3.0.1)

I have generated test files with checkboxes (form controls) with every major version of Excel since 2007 and observed the same behaviour throughout. I am including here 2 test files created with Excel 2013, both have the legacy checkboxes but in one the checkboxes have the properties Move with cell and Size with Cells enabled in Excel, the other file doesn't.
If you download the files, unzip them and open xl/drawings/vmlDrawing1.vml :
- the checkboxes which had Move and Size with cells enabled in Excel do not have those properties in the ClientData block
- the checkboxes which had Move and Size with cells disabled do have those properties declared in the ClientData block, but not assigned.

Now I am still a bit careful about these findings because they are opposite to MS own documentation which states "If this element is specified without a value, it is assumed to be true.", so the exact opposite of what I've seen.
If somebody else could do the test and confirm that I am not crazy that would be of great help.

If that behavior is indeed confirmed then I have solution ready at hand in the WIP patch linked in my last comment.
Comment 15 Johann Lorber 2025-09-15 10:29:03 UTC
Created attachment 202834 [details]
Checkboxes Testfile - Excel 2013 - Move and Size with Cells enabled
Comment 16 Johann Lorber 2025-09-15 10:29:38 UTC
Created attachment 202835 [details]
Checkboxes Testfile - Excel 2013 - Move and Size with Cells disabled
Comment 17 Justin L 2025-11-19 16:37:51 UTC
(In reply to Johann Lorber from comment #13)
> ... it looks like it messes
> up the positioning of those shapes in the import result.
I'm seeing the same thing. By anchoring it to the cell, the import code is also changing the position from where it had imported previously.

I believe that is because it seems that copy/paste can produce invalid x:anchor values (which may offset larger than the available PIXELS in the row/column. So the calculated offset result needs to be limited by the anchor cell's dimensions.

I have a patch for that at  https://gerrit.libreoffice.org/c/core/+/194218
Comment 18 Commit Notification 2025-11-25 17:26:36 UTC
Johann LORBER committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2a3f53c4aeb915337e9bce5aba88f4a40305780b

tdf#166724 - Checkbox anchor wrongly imported

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Commit Notification 2025-11-27 00:16:14 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/50421467b80e904590bf6811725cbe67263d3572

tdf#166724 sc oox: limit x:anchor offsets to inside of the cell

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 20 Commit Notification 2025-11-27 00:17:17 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c53f280f23a6f7e52617481b473eb4b7cc030146

tdf#166724 sc: update cell anchored objects if recalc optimal height

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 21 Commit Notification 2025-11-27 00:17:19 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/939c11dec6f6b25c7b4db442a33f15849b8863c0

tdf#166724 sc: vml x:anchor provides end anchor: so ResizeWithCells

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 22 Commit Notification 2025-12-05 21:31:06 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/71dc2b20cc76d2728cb57a3bf62f10db8384a74b

related tdf#166724 sc GetRange: last twip still in cell

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 23 Commit Notification 2025-12-11 23:45:30 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/034a6407c15f09167d876b24354852d215a1a9af

tdf#166724 unit test: use Carlito, not Calibri as font

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.